Fix hosted app menu button positioning on Windows 7

The position of the hosted app menu button was moved accidentally
by https://chromium-review.googlesource.com/c/chromium/src/+/1183019.
This CL fixes the incorrect y offset used for Windows 7.

Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=354844&signed_aid=ABFeIzothXglSH0Jji074A==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=354845&signed_aid=0q4hc-ELfn8qErN1FZ9KlQ==&inline=1

Bug: 877880
Change-Id: Ie90a49df72dea040c3d7224b9dfd1ee6aaabf8c4
Reviewed-on: https://chromium-review.googlesource.com/1189247
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586215}
Former-commit-id: ab1b027ee7a5b6f1e4893410256bbcc40de97c5d